Added feature importance and ROC curve to model evaluation

--- a/config/params.yaml
+++ b/config/params.yaml
@@ -14,6 +14,7 @@ SVC:
   gamma: "scale"
   tol: 0.001
   class_weight: "balanced"
+  probability: True
 
 RandomForestClassifier:
   n_estimators: 200
